--- a/map.css
+++ b/map.css
@@ -1,15 +1,5 @@
-body, html {
-    margin: 0;
-    padding: 0;
-}
 
-#intro {
-    position: absolute;
-    top: 0;
-    transition: transform 2s ease-in-out;
+.map {
+    position: relative;
+    z-index: -1;
 }
-
-#intro.slide-off {
-    transform: translateY(-2000px);
-}
-
