--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
     border-radius: 50%; 
     margin-top: 9%; 
     margin-left: 43.5%; 
-    position: relative;
+    position: absolute;
 }
 
 .ironman {
     border-radius: 50%;
     scale: 6%;
-    position: relative
+    position: absolute
 }
